--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
   <br>
   <input type="range" id="slider" min="0" max="87" value="44">
   <br>
-  <button onclick="startIncrease()">⬆️ Increase ADH</button>
-  <button onclick="startDecrease()">⬇️ Decrease ADH</button>
+  <button onclick="startIncrease()">⬆️ Simulate inappropriate ADH secretion</button>
+  <button onclick="startDecrease()">⬇️ Decrease ADH and excrete free water</button>
   <button onclick="stopPlayback()">⏸ Pause</button>
   <div class="meters">
     <p>ADH Level: <span id="adhLevel">50%</span></p>
